tests/ui/inner-static-type-parameter.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/inner-static-type-parameter.rs:6:19
   |
LL | fn foo<T>() {
   |        - type parameter from outer item
LL |     static a: Bar<T> = Bar::What;
   |                   ^ use of generic parameter from outer item

error[E0392]: type parameter `T` is never used
  --> $DIR/inner-static-type-parameter.rs:3:10
   |
LL | enum Bar<T> { What }
   |          ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0392, E0401.
For more information about an error, try `rustc --explain E0392`.
